Added next exercises

--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -4464,6 +4464,298 @@
     "M &= (X.sum(axis=-1) == n)\n",
     "print(X[M])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ec163d8",
+   "metadata": {},
+   "source": [
+    "# 89. Consider a one­dimensional array Z, build a two­dimensional array whose first row is (Z[0],Z[1],Z[2]) and each subsequent row is shifted by 1 (last row should be (Z[­3],Z[­2],Z[­1]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "04520727",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array after shifting is : \n",
+      " [[0 1 2]\n",
+      " [1 2 3]\n",
+      " [2 3 4]\n",
+      " [3 4 5]\n",
+      " [4 5 6]\n",
+      " [5 6 7]\n",
+      " [6 7 8]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numpy.lib import stride_tricks\n",
+    "def shifting(a, window):\n",
+    "    shape = (a.size - window + 1, window)\n",
+    "    strides = (a.itemsize, a.itemsize)\n",
+    "    return stride_tricks.as_strided(a, shape=shape, strides=strides)\n",
+    "X = shifting(np.arange(10), 3)\n",
+    "print(\"Array after shifting is : \\n\", X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecc479a7",
+   "metadata": {},
+   "source": [
+    "# 90. Convert a vector of ints into a matrix binary representation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547ae866",
+   "metadata": {},
+   "source": [
+    "- numpy.unpackbits() - function for doing binary operations in numpy.\n",
+    "- It is used to unpacks elements of a uint8 array into a binary-valued output array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ad72008d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary format of array is : \n",
+      "\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1]\n",
+      " [0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 1 1]\n",
+      " [0 0 0 0 1 1 1 1]\n",
+      " [0 0 0 1 0 0 0 0]\n",
+      " [0 0 1 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n",
+      "[[0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1]\n",
+      " [0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 1 1]\n",
+      " [0 0 0 0 1 1 1 1]\n",
+      " [0 0 0 1 0 0 0 0]\n",
+      " [0 0 1 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "Int_array = np.array([0, 1, 2, 3, 15, 16, 32, 64, 128])\n",
+    "\n",
+    "#reshaping array\n",
+    "Binary_arr = ((Int_array.reshape(-1,1) & (2**np.arange(8))) != 0).astype(int)\n",
+    "print(\"Binary format of array is : \\n\")\n",
+    "print(Binary_arr[:,::-1])\n",
+    "Int_array = np.array([0, 1, 2, 3, 15, 16, 32, 64, 128], dtype=np.uint8)\n",
+    "print(np.unpackbits(Int_array[:, np.newaxis], axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d748818c",
+   "metadata": {},
+   "source": [
+    "# 91. Considering 2 vectors A & B, write the einsum equivalent of inner, outer, sum,and mul function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5fe13f05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(0, 0), dtype=int32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "A = np.arange(4, 4)\n",
+    "B = np.arange(4, 4)\n",
+    "np.einsum('i->', A)# np.sum(A)\n",
+    "np.einsum('i,i->i', A, B) # A * B\n",
+    "np.einsum('i,i', A, B) # np.inner(A, B)\n",
+    "np.einsum('i,j', A, B) # np.outer(A, B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e805b69",
+   "metadata": {},
+   "source": [
+    "# 92. Considering a path described by two vectors (X,Y), how to sample it using equidistant samples ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "957a4294",
+   "metadata": {},
+   "source": [
+    "- np.diff() - numpy.diff(arr[, n[, axis]]) function is used when we calculate the n-th order discrete difference along the given axis. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f095daa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.00000000e+00 -3.73131229e-01 -2.59817608e+00 -3.26212050e+00\n",
+      " -2.18442687e+00 -2.98929946e-02  2.42923642e+00  4.54913599e+00\n",
+      "  5.92318348e+00  6.35117933e+00  5.82369277e+00  4.46259540e+00\n",
+      "  2.47320794e+00  1.09577220e-01 -2.36575300e+00 -4.71261671e+00\n",
+      " -6.72701769e+00 -8.25541575e+00 -9.18486120e+00 -9.46381505e+00\n",
+      " -9.11085788e+00 -8.12875279e+00 -6.63306046e+00 -4.69271059e+00\n",
+      " -2.44736165e+00 -2.05444585e-02  2.46101146e+00  4.86841760e+00\n",
+      "  7.08937968e+00  9.02539126e+00  1.05948609e+01  1.17357250e+01\n",
+      "  1.24068974e+01  1.25885805e+01  1.22815267e+01  1.15053927e+01\n",
+      "  1.02963689e+01  8.70429550e+00  6.78948686e+00  4.61716636e+00\n",
+      "  2.25853448e+00 -1.98731680e-01 -2.68040566e+00 -5.11543300e+00\n",
+      " -7.41973991e+00 -9.53891040e+00 -1.14237629e+01 -1.29919305e+01\n",
+      " -1.42355069e+01 -1.51243232e+01 -1.56061571e+01 -1.57219415e+01\n",
+      " -1.54217066e+01 -1.47579136e+01 -1.37255236e+01 -1.23634834e+01\n",
+      " -1.07024632e+01 -8.78327367e+00 -6.65029558e+00 -4.35514246e+00\n",
+      " -1.94290275e+00  5.28038914e-01  3.00985904e+00  5.45450275e+00\n",
+      "  7.80093594e+00  1.00179639e+01  1.20595602e+01  1.38732623e+01\n",
+      "  1.54564938e+01  1.67497894e+01  1.77435802e+01  1.84439878e+01\n",
+      "  1.87990820e+01  1.88271003e+01  1.85472755e+01  1.79378850e+01\n",
+      "  1.70105456e+01  1.58085777e+01  1.43501808e+01  1.26222364e+01\n",
+      "  1.06905445e+01  8.58498641e+00  6.33562529e+00  3.96179025e+00\n",
+      "  1.51802643e+00 -9.61699044e-01 -3.44349301e+00 -5.88951759e+00\n",
+      " -8.26006582e+00 -1.05270865e+01 -1.26610269e+01 -1.46343020e+01\n",
+      " -1.64206033e+01 -1.79708499e+01 -1.92894561e+01 -2.03605967e+01\n",
+      " -2.11716587e+01 -2.17133504e+01 -2.19797677e+01 -2.19626531e+01\n",
+      " -2.16476737e+01 -2.10622561e+01 -2.02145809e+01 -1.91158467e+01\n",
+      " -1.77800930e+01 -1.62239930e+01 -1.44666197e+01 -1.25291882e+01\n",
+      " -1.04347777e+01 -8.20773276e+00 -5.86978851e+00 -3.45563299e+00\n",
+      " -9.92556869e-01  1.49191203e+00  3.97031733e+00  6.41557503e+00\n",
+      "  8.80126359e+00  1.11019001e+01  1.32931995e+01  1.53523150e+01\n",
+      "  1.72580567e+01  1.89910866e+01  2.05340895e+01  2.18719167e+01\n",
+      "  2.29917039e+01  2.38829603e+01  2.45376309e+01  2.49501314e+01\n",
+      "  2.51173551e+01  2.50386548e+01  2.47157984e+01  2.41529019e+01\n",
+      "  2.33563391e+01  2.23346314e+01  2.10983193e+01  1.96598169e+01\n",
+      "  1.80332532e+01  1.62343003e+01  1.42799934e+01  1.21885425e+01\n",
+      "  9.97914013e+00  7.67176574e+00  5.28699023e+00  2.84441658e+00\n",
+      "  3.68190102e-01 -2.11846865e+00 -4.59426061e+00 -7.03829202e+00\n",
+      " -9.43024209e+00 -1.17505186e+01 -1.39803999e+01 -1.61021634e+01\n",
+      " -1.80991985e+01 -1.99561058e+01 -2.16587804e+01 -2.31850397e+01\n",
+      " -2.45166960e+01 -2.56568097e+01 -2.65976904e+01 -2.73332424e+01\n",
+      " -2.78589555e+01 -2.81718833e+01 -2.82706110e+01 -2.81552119e+01\n",
+      " -2.78066635e+01 -2.72341677e+01 -2.64578863e+01 -2.54844118e+01\n",
+      " -2.43214986e+01 -2.29779690e+01 -2.14636172e+01 -1.97837046e+01\n",
+      " -1.79341987e+01 -1.59545785e+01 -1.38585628e+01 -1.16602783e+01\n",
+      " -9.37416511e+00 -7.01488958e+00 -4.59184632e+00 -2.12995331e+00\n",
+      "  3.50691071e-01  2.83498918e+00  5.30813450e+00  7.75565814e+00\n",
+      "  1.01522531e+01  1.24813227e+01  1.47337756e+01  1.68973642e+01\n",
+      "  1.89604991e+01  2.09071945e+01  2.26943693e+01  2.43420179e+01\n",
+      "  2.58422998e+01  2.71881423e+01  2.83731992e+01  2.93376609e+01\n",
+      "  3.01222558e+01  3.07280750e+01  3.11531219e+01  3.13960177e+01]\n",
+      "[ 0.00000000e+00  1.74026724e+00  9.81816584e-01 -1.34251287e+00\n",
+      " -3.53191891e+00 -4.70449474e+00 -4.59573427e+00 -3.33831870e+00\n",
+      " -1.28956083e+00  1.14234685e+00  3.55645601e+00  5.62188218e+00\n",
+      "  7.09389488e+00  7.82951803e+00  7.78700678e+00  6.99685666e+00\n",
+      "  5.55535240e+00  3.60417006e+00  1.30506373e+00 -1.15819722e+00\n",
+      " -3.61328132e+00 -5.89130465e+00 -7.87065053e+00 -9.41689057e+00\n",
+      " -1.04714836e+01 -1.09903787e+01 -1.09354306e+01 -1.03330912e+01\n",
+      " -9.22690166e+00 -7.67489830e+00 -5.75257980e+00 -3.54832201e+00\n",
+      " -1.15854355e+00  1.31709956e+00  3.78023622e+00  6.13780326e+00\n",
+      "  8.30540149e+00  1.02098724e+01  1.17910419e+01  1.29972950e+01\n",
+      "  1.37774249e+01  1.41319792e+01  1.40585758e+01  1.35636816e+01\n",
+      "  1.26345244e+01  1.13409083e+01  9.72216360e+00  7.79464305e+00\n",
+      "  5.64544223e+00  3.32503222e+00  8.88107041e-01 -1.59329248e+00\n",
+      " -4.05992507e+00 -6.45313746e+00 -8.71327144e+00 -1.07900854e+01\n",
+      " -1.26380653e+01 -1.42147006e+01 -1.54892299e+01 -1.64390858e+01\n",
+      " -1.70351433e+01 -1.72938948e+01 -1.71685631e+01 -1.67219979e+01\n",
+      " -1.59044166e+01 -1.47824153e+01 -1.33665280e+01 -1.16678134e+01\n",
+      " -9.75246391e+00 -7.63091465e+00 -5.35345831e+00 -2.96905840e+00\n",
+      " -5.09631905e-01  1.97507060e+00  4.44430515e+00  6.85344809e+00\n",
+      "  9.15903461e+00  1.13337844e+01  1.33467125e+01  1.51336120e+01\n",
+      "  1.66966787e+01  1.80162922e+01  1.90746708e+01  1.98127969e+01\n",
+      "  2.02634499e+01  2.04221761e+01  2.02877631e+01  1.98449702e+01\n",
+      "  1.90974465e+01  1.80799531e+01  1.68069397e+01  1.52959771e+01\n",
+      "  1.35665801e+01  1.16227312e+01  9.51601869e+00  7.27388893e+00\n",
+      "  4.92519240e+00  2.49981337e+00  2.82932820e-02 -2.45817963e+00\n",
+      " -4.92460367e+00 -7.34030894e+00 -9.67635928e+00 -1.19050601e+01\n",
+      " -1.40002645e+01 -1.59376556e+01 -1.76950019e+01 -1.92523833e+01\n",
+      " -2.05923861e+01 -2.16995543e+01 -2.25478860e+01 -2.31432552e+01\n",
+      " -2.34800725e+01 -2.35556687e+01 -2.33702741e+01 -2.29269662e+01\n",
+      " -2.22315865e+01 -2.12926288e+01 -2.01211000e+01 -1.87303570e+01\n",
+      " -1.71359212e+01 -1.53552740e+01 -1.34076356e+01 -1.13137308e+01\n",
+      " -9.09554383e+00 -6.77606668e+00 -4.37904252e+00 -1.92870828e+00\n",
+      "  5.50461201e-01  3.03400451e+00  5.49771780e+00  7.91788934e+00\n",
+      "  1.02715222e+01  1.25365431e+01  1.46919953e+01  1.67182148e+01\n",
+      "  1.85969872e+01  2.03116866e+01  2.18473923e+01  2.31909872e+01\n",
+      "  2.43312337e+01  2.52588296e+01  2.59664444e+01  2.64391214e+01\n",
+      "  2.66748505e+01  2.66796333e+01  2.64545680e+01  2.60026765e+01\n",
+      "  2.53288265e+01  2.44396400e+01  2.33433894e+01  2.20498837e+01\n",
+      "  2.05703459e+01  1.89172843e+01  1.71043584e+01  1.51396391e+01\n",
+      "  1.30387952e+01  1.08294252e+01  8.52903617e+00  6.15551380e+00\n",
+      "  3.72697869e+00  1.26164946e+00 -1.22228693e+00 -3.70679651e+00\n",
+      " -6.17014862e+00 -8.59028675e+00 -1.09516293e+01 -1.32379536e+01\n",
+      " -1.54338179e+01 -1.75246263e+01 -1.94966815e+01 -2.13317519e+01\n",
+      " -2.29952001e+01 -2.44987532e+01 -2.58335652e+01 -2.69919481e+01\n",
+      " -2.79673583e+01 -2.87543764e+01 -2.93186910e+01 -2.96679958e+01\n",
+      " -2.98181354e+01 -2.97693731e+01 -2.95229769e+01 -2.90811595e+01\n",
+      " -2.84133854e+01 -2.75430665e+01 -2.64934034e+01 -2.52713717e+01\n",
+      " -2.38845608e+01 -2.23353782e+01 -2.06051319e+01 -1.87442619e+01\n",
+      " -1.67635423e+01 -1.46739620e+01 -1.24866789e+01 -1.01933401e+01\n",
+      " -7.83474328e+00 -5.42495146e+00 -2.97607515e+00 -5.00072086e-01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "mat = np.arange(0, 10*np.pi, 0.1)\n",
+    "a = 1\n",
+    "x = a*phi*np.cos(mat)\n",
+    "y = a*phi*np.sin(mat)\n",
+    "dr = (np.diff(x)**2 + np.diff(y)**2)**.5 # segment lengths\n",
+    "r = np.zeros_like(x)\n",
+    "r[1:] = np.cumsum(dr) # integrate path\n",
+    "r_int = np.linspace(0, r.max(), 200) # regular spaced path\n",
+    "x_int = np.interp(r_int, r, x)# integrate path\n",
+    "print(x_int)\n",
+    "y_int = np.interp(r_int, r, y)\n",
+    "print(y_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f90649a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
