--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -4750,9 +4750,275 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a211d7c2",
+   "metadata": {},
+   "source": [
+    "# 93. Consider an arbitrary array, write a function that extract a subpart with a fixed shape and centered on a given element (pad with a fillvalue when necessary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ad1488e6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8 2 0 8 6 2 6 9 7 6]\n",
+      " [9 9 5 8 1 5 7 5 2 4]\n",
+      " [4 5 3 4 7 9 7 1 9 7]\n",
+      " [3 7 0 1 4 9 6 1 4 2]\n",
+      " [1 4 6 1 5 8 4 1 8 0]\n",
+      " [0 2 1 6 3 4 1 2 5 9]\n",
+      " [3 5 9 7 1 3 0 2 8 3]\n",
+      " [7 1 7 9 6 0 6 0 6 5]\n",
+      " [7 6 3 2 0 5 4 0 8 7]\n",
+      " [4 9 0 5 5 1 0 7 6 0]]\n",
+      "[[0 0 0 0 0]\n",
+      " [0 8 2 0 8]\n",
+      " [0 9 9 5 8]\n",
+      " [0 4 5 3 4]\n",
+      " [0 3 7 0 1]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\praja\\AppData\\Local\\Temp\\ipykernel_9296\\1233925338.py:21: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  R[r] = Z[z]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#Creating random array\n",
+    "Z = np.random.randint(0,10,(10,10))\n",
+    "\n",
+    "#specify the shape\n",
+    "shape = (5,5)\n",
+    "\n",
+    "#array to be filled with\n",
+    "fill = 0\n",
+    "position = (1,1)\n",
+    "\n",
+    "#creating ones array with provided shape\n",
+    "R = np.ones(shape, dtype=Z.dtype)*fill\n",
+    "P = np.array(list(position)).astype(int)\n",
+    "Rs = np.array(list(R.shape)).astype(int)\n",
+    "Zs = np.array(list(Z.shape)).astype(int)\n",
+    "R_start = np.zeros((len(shape),)).astype(int)\n",
+    "R_stop = np.array(list(shape)).astype(int)\n",
+    "Z_start = (P-Rs//2)\n",
+    "Z_stop = (P+Rs//2)+Rs%2\n",
+    "R_start = (R_start - np.minimum(Z_start,0)).tolist()\n",
+    "Z_start = (np.maximum(Z_start,0)).tolist()\n",
+    "R_stop = np.maximum(R_start, (R_stop - np.maximum(Z_stop-Zs,0))).tolist()\n",
+    "Z_stop = (np.minimum(Z_stop,Zs)).tolist()\n",
+    "r = [slice(start,stop) for start,stop in zip(R_start,R_stop)]\n",
+    "z = [slice(start,stop) for start,stop in zip(Z_start,Z_stop)]\n",
+    "R[r] = Z[z]\n",
+    "print(Z)\n",
+    "print(R)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76a7031f",
+   "metadata": {},
+   "source": [
+    "# 94. How to implement the Game of Life using numpy arrays?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1534c00a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 1]\n",
+      " [1 1 0 ... 0 1 1]\n",
+      " [0 1 1 ... 1 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 1 1]\n",
+      " [0 1 0 ... 1 0 1]\n",
+      " [0 0 0 ... 0 0 1]]\n",
+      "\n",
+      " [[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 1 ... 0 0 0]\n",
+      " [0 0 1 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def iterate(X):\n",
+    "    N = (Z[0:-2,0:-2] + Z[0:-2,1:-1] + Z[0:-2,2:] +\n",
+    "    X[1:-1,0:-2] + X[1:-1,2:] +\n",
+    "    X[2: ,0:-2] + X[2: ,1:-1] + X[2: ,2:])\n",
+    "    # Apply rules\n",
+    "    birth = (N==3) & (X[1:-1,1:-1]==0)\n",
+    "    survive = ((N==2) | (N==3)) & (X[1:-1,1:-1]==1)\n",
+    "    X[...] = 0\n",
+    "    X[1:-1,1:-1][birth | survive] = 1\n",
+    "    return X\n",
+    "X = np.random.randint(0,2,(50,50))\n",
+    "print(X)\n",
+    "for i in range(100): \n",
+    "    X = iterate(X)\n",
+    "print(\"\\n\", X) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f67bbd",
+   "metadata": {},
+   "source": [
+    "# 95. Considering two arrays with shape (1,3) and (3,1), how to compute their sum using an iterator?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f72d5b5a",
+   "metadata": {},
+   "source": [
+    "- nditer() - is a helping function that can be used from very basic to very advanced iterations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d67a502c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [1 2 3]\n",
+      " [2 3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Comsiderig two arrays\n",
+    "A = np.arange(3).reshape(3,1)\n",
+    "B = np.arange(3).reshape(1,3)\n",
+    "it = np.nditer([A,B,None])\n",
+    "for x,y,z in it: \n",
+    "    z[...] = x + y\n",
+    "print(it.operands[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f726263",
+   "metadata": {},
+   "source": [
+    "# 96.How to tell if a given 2D array has null columns?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8ec4ec0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True False  True  True  True  True  True  True  True False]\n",
+      " [ True False False  True False  True  True  True  True  True]\n",
+      " [False False False  True  True  True False False  True  True]]\n",
+      "[[False  True False False False False False False False  True]\n",
+      " [False  True  True False  True False False False False False]\n",
+      " [ True  True  True False False False  True  True False False]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z = np.random.randint(0,3,(3,10))\n",
+    "Z[:,1] = 0\n",
+    "Z = Z.astype(bool)\n",
+    "print(Z)\n",
+    "print(~Z)\n",
+    "(Z).any(axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82983f52",
+   "metadata": {},
+   "source": [
+    "# 97. Compute bootstrapped 95% confidence intervals for the mean of a 1D array X (i.e., resample the elements of an array with replacement N times, compute the mean of each sample, and then compute percentiles over the means)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45f3d1ff",
+   "metadata": {},
+   "source": [
+    "- numpy.percentile - Compute the q-th percentile of the data along the specified axis.\n",
+    "                   - Returns the q-th percentile(s) of the array elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0aaa7946",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.18625457  0.20024258]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random 1D array\n",
+    "X = np.random.randn(100)\n",
+    "# number of bootstrap samples\n",
+    "N = 1000 \n",
+    "idx = np.random.randint(0, X.size, (N, X.size))\n",
+    "means = X[idx].mean(axis=1)\n",
+    "\n",
+    "confint = np.percentile(means, [2.5, 97.5])\n",
+    "print(confint)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f90649a",
+   "id": "e2e9a241",
    "metadata": {},
    "outputs": [],
    "source": []
