Added all exercise related to numpy

--- a/Numpy_100exercises.ipynb
+++ b/Numpy_100exercises.ipynb
@@ -4991,15 +4991,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0aaa7946",
+   "execution_count": 12,
+   "id": "32b18269",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.18625457  0.20024258]\n"
+      "[-0.17218959  0.17043296]\n"
      ]
     }
    ],
@@ -5016,12 +5016,136 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2e9a241",
+   "cell_type": "markdown",
+   "id": "654a8115",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 98. Consider a set of p matrices wich shape (n,n) and a set of p vectors with shape (n,1). How to compute the sum of of the p matrix products at once? (result has shape (n,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "96fbeef6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]\n",
+      " [200.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p, n = 10, 20\n",
+    "M = np.ones((p,n,n))\n",
+    "V = np.ones((p,n,1))\n",
+    "S = np.tensordot(M, V, axes=[[0, 2], [0, 1]])\n",
+    "print(S)\n",
+    "# It works, because:\n",
+    "# M is (p,n,n)\n",
+    "# V is (p,n,1)\n",
+    "# Thus, summing over the paired axes 0 and 0 (of M and V independently),\n",
+    "# and 2 and 1, to remain with a (n,1) vector."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "279a820f",
+   "metadata": {},
+   "source": [
+    "# 99. How to get the n largest values of an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "707d46e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9995 9996 9997 9998 9999]\n",
+      "[9998 9999 9997 9996 9995]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.arange(10000)\n",
+    "np.random.shuffle(Z)\n",
+    "n = 5\n",
+    "# Slow\n",
+    "print (Z[np.argsort(Z)[-n:]])\n",
+    "# Fast\n",
+    "print (Z[np.argpartition(-Z,n)[:n]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84c7c278",
+   "metadata": {},
+   "source": [
+    "# 100. Given an arbitrary number of vectors, build the cartesian product (every combinations of every item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3f71e273",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 4 6]\n",
+      " [1 4 7]\n",
+      " [1 5 6]\n",
+      " [1 5 7]\n",
+      " [2 4 6]\n",
+      " [2 4 7]\n",
+      " [2 5 6]\n",
+      " [2 5 7]\n",
+      " [3 4 6]\n",
+      " [3 4 7]\n",
+      " [3 5 6]\n",
+      " [3 5 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cartesian(arrays):\n",
+    "    arrays = [np.asarray(a) for a in arrays]\n",
+    "    shape = (len(x) for x in arrays)\n",
+    "    ix = np.indices(shape, dtype=int)\n",
+    "    ix = ix.reshape(len(arrays), -1).T\n",
+    "    for n, arr in enumerate(arrays):\n",
+    "        ix[:, n] = arrays[n][ix[:, n]]\n",
+    "    return ix\n",
+    "print(cartesian(([1, 2, 3], [4, 5], [6, 7])))"
+   ]
   }
  ],
  "metadata": {
